<!--  
 /*******************************Copyright Block*********************************
 *                                                                             *
 *                Sally Prayer Times Calculator (Final 1.2.15)                 *
 *           Copyright (C) 2015 http://www.sallyproject.altervista.org/        *
 *                         bibali1980@gmail.com                              *
 *                                                                             *
 *     This program is free software: you can redistribute it and/or modify    *
 *     it under the terms of the GNU General Public License as published by    *
 *      the Free Software Foundation, either version 3 of the License, or      *
 *                      (at your option) any later version.                    *
 *                                                                             *
 *       This program is distributed in the hope that it will be useful,       *
 *        but WITHOUT ANY WARRANTY; without even the implied warranty of       *
 *        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the        *
 *                 GNU General Public License for more details.                *
 *                                                                             *
 *      You should have received a copy of the GNU General Public License      *
 *      along with this program.  If not, see http://www.gnu.org/licenses      *
 *******************************************************************************/
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgetMainBackground"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/widget_background"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="50"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/missing_to"
                style="@style/missing_time_Style_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/not_set" />

            <TextView
                android:id="@+id/missing_salat"
                style="@style/missing_time_Style_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/not_set" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="50"
            android:gravity="center_vertical|center_horizontal|center" >

            <TextView
                android:id="@+id/missing_time"
                style="@style/widget_missing_time_Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/not_set" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <LinearLayout
            android:id="@+id/fajrLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_selected"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/fajr_label"
                style="@+style/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/fajr" />

            <TextView
                android:id="@+id/fajrTime"
                style="@+style/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:scrollHorizontally="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shorou9LinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_selected"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/shorouk_label"
                style="@+style/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/shorouk" />

            <TextView
                android:id="@+id/shoroukTime"
                style="@+style/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/duhrLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_selected"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/duhr_label"
                style="@+style/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/duhr" />

            <TextView
                android:id="@+id/duhrTime"
                style="@+style/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/asrLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_selected"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/asr_label"
                style="@+style/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/asr" />

            <TextView
                android:id="@+id/asrTime"
                style="@+style/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/maghribLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_selected"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/maghrib_label"
                style="@+style/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/maghrib" />

            <TextView
                android:id="@+id/maghribTime"
                style="@+style/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ishaaLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_selected"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ishaa_label"
                style="@+style/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/ishaa" />

            <TextView
                android:id="@+id/ishaaTime"
                style="@+style/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>